@@ -325,14 +325,9 @@ ReplSetServers.prototype.allServerInstances = function() {
 
 // Ensure no callback is left hanging when we have an error
 var __executeAllCallbacksWithError = function(dbInstance, error) {
-  // console.log("========================== dbInstance")
-  // console.dir(dbInstance._mongodbHandlers)
-  
   var keys = Object.keys(dbInstance._mongodbHandlers._notReplied);
   // Iterate over all callbacks
   for(var i = 0; i < keys.length; i++) {
-    // console.log("------------------------------------------------------------ callback")
-    
     // Get info element
     var info = dbInstance._mongodbHandlers._notReplied[keys[i]];
     // Get callback
@@ -346,10 +341,8 @@ var __executeAllCallbacksWithError = function(dbInstance, error) {
 }
 
 ReplSetServers.prototype.connect = function(parent, options, callback) {
-  // console.log("====================================================== ReplSetServers.prototype.connect")
   var self = this;
   var dateStamp = new Date().getTime();
-  // console.log("================================== ReplSetServers.prototype.connect :: " + dateStamp)
   if('function' === typeof options) callback = options, options = {};  
   if(options == null) options = {};
   if(!('function' === typeof callback)) callback = null;
@@ -377,17 +370,10 @@ ReplSetServers.prototype.connect = function(parent, options, callback) {
         if(err == null) {
           // For all members check if we have the same ones in the current set
           var members = result.documents[0].members;
-          // console.log("-------------------------------------------------- CHECK STATUS")
-          // console.log("members.length = " + members.length)
-          // console.log("Object.keys(self._state.addresses).length = " + Object.keys(self._state.addresses).length)
-          
           // Peform a set of check to see if the replicaset has changed
           if(self._state.addresses != null && Object.keys(self._state.addresses).length != members.length) {
             // We have changed update replicaset object to restart connections
             self.replicaSetChanged = true;
-
-            // console.log("========================================================= CHECK REPLICASET STATUS 0");
-            // console.dir("self.replicaSetChanged = " + self.replicaSetChanged);          
           } else {
             // We need to dig a bit deeper and check if the roles of different servers have changed            
             // Located members must have the same setup (being secondary etc) for it to be equivalent
@@ -412,12 +398,6 @@ ReplSetServers.prototype.connect = function(parent, options, callback) {
             } else {
               setTimeout(checkStateOfReplicasetFunction, replicasetCheckFrequencey);
             }
-
-            // Let's check if we need to reconfigure the replicaset
-            // console.log("========================================================= CHECK REPLICASET STATUS 1");
-            // console.dir("self.replicaSetChanged = " + self.replicaSetChanged);
-            // console.dir("numberOfFoundMembersWithSameSetup = " + numberOfFoundMembersWithSameSetup);
-            // console.dir("members.length = " + members.length);
           }                    
         } else {
           setTimeout(checkStateOfReplicasetFunction, replicasetCheckFrequencey);
@@ -445,7 +425,6 @@ ReplSetServers.prototype.connect = function(parent, options, callback) {
   // Create a connection handler
   var connectionHandler = function(instanceServer) {
     return function(err, result) {
-      // console.log("================================== ReplSetServers.prototype.connect :: " + dateStamp + " :: 0::0 " + replSetSelf._serverState)
       // Don't attempt to connect if we are done
       if(replSetSelf._serverState === 'disconnected') return;
       // Remove a server from the list of intialized servers we need to perform
@@ -471,12 +450,8 @@ ReplSetServers.prototype.connect = function(parent, options, callback) {
                 
         // Do not add the server if it exists
         if(isMaster == true || secondary == true || arbiterOnly == true) {
-          // console.log("==================================================================== document")
-          // console.dir(document)
-
           // Handle a closed connection
           var closeHandler = function(err, server) {
-            // console.log("====================================================== replset::server::close")
             // Shut down the replicaset for now and Fire off all the callbacks sitting with no reply
             replSetSelf.close(function() {
               __executeAllCallbacksWithError(parent, new Error("connection closed"));        
@@ -487,7 +462,6 @@ ReplSetServers.prototype.connect = function(parent, options, callback) {
 
           // Handle a connection timeout
           var timeoutHandler = function(err, server) {
-            // console.log("====================================================== replset::server::timeout")
             // Shut down the replicaset for now and Fire off all the callbacks sitting with no reply
             replSetSelf.close(function() {
               __executeAllCallbacksWithError(parent, new Error("connection timed out"));
@@ -498,7 +472,6 @@ ReplSetServers.prototype.connect = function(parent, options, callback) {
 
           // Handle an error
           var errorHandler = function(err, server) {
-            // console.log("====================================================== replset::server::error")
             // Shut down the replicaset for now and Fire off all the callbacks sitting with no reply
             replSetSelf.close(function() {
               __executeAllCallbacksWithError(parent, err);
@@ -623,11 +596,8 @@ ReplSetServers.prototype.connect = function(parent, options, callback) {
             }
           }          
         } else {
-          // console.log("========================================================= NOT A FREAKING SERVER")
-          // console.dir(Object.keys(replSetSelf._state.addresses))
           // Remove the instance from out list of servers
           delete replSetSelf._state.addresses[me];
-          // console.dir(Object.keys(replSetSelf._state.addresses))
         }
       }
       
@@ -734,7 +704,6 @@ ReplSetServers.prototype.connect = function(parent, options, callback) {
     serverConnections[i].connect(parent, {returnIsMasterResults: true, eventReceiver:serverConnections[i]}, connectionHandler(serverConnections[i]));
   }  
   
-  // console.log("================================== ReplSetServers.prototype.connect :: " + dateStamp + " :: 3")
   // Check if we have an error in the inital set of servers and callback with error
   if(replSetSelf._state.errorMessages.length > 0 && typeof callback === 'function') {
     // ensure no callbacks get called twice
@@ -750,14 +719,9 @@ ReplSetServers.prototype.checkoutWriter = function() {
 }
 
 ReplSetServers.prototype.checkoutReader = function() {
-  // console.log("================================================== checkoutReader")
-  // console.log("this._readPreference = ")
-  // console.dir(this._readPreference)
-  
   // If we have specified to read from a secondary server grab a random one and read
   // from it, otherwise just pass the primary connection
   if((this.readSecondary == true || this._readPreference == Server.READ_SECONDARY || this._readPreference == Server.READ_SECONDARY_ONLY) && Object.keys(this._state.secondaries).length > 0) {
-    // console.log("-------------------------------------------------------------------- 0")
     // Checkout a secondary server from the passed in set of servers
     if(this.strategyInstance != null) {
       return this.strategyInstance.checkoutSecondary();
@@ -768,16 +732,10 @@ ReplSetServers.prototype.checkoutReader = function() {
       return this._state.secondaries[key].checkoutReader();      
     }    
   } else if(this._readPreference == Server.READ_SECONDARY_ONLY && Object.keys(this._state.secondaries).length == 0) {
-    // console.log("-------------------------------------------------------------------- 1")
     return null;
   } else if(this._readPreference != null && typeof this._readPreference === 'object') {
-    // console.log("-------------------------------------------------------------------- 2")
     // Get all tag keys (used to try to find a server that is valid)
     var keys = Object.keys(this._readPreference);
-    // console.dir(keys)
-    // console.log("-------------------------------------------------------------------- 2:1")
-    // console.dir(this._state.byTags)
-    
     // final instance server
     var instanceServer = null;
     // for each key look for an avilable instance
@@ -801,7 +759,6 @@ ReplSetServers.prototype.checkoutReader = function() {
     // Return the instance of the server
     return instanceServer != null ? instanceServer.checkoutReader() : this.checkoutWriter();
   } else {
-    // console.log("-------------------------------------------------------------------- 3")
     return this.checkoutWriter();
   }
 }
@@ -887,14 +844,7 @@ ReplSetServers.prototype.close = function(callback) {
             
       // If we are finished perform the call back
       if(numberOfServersToClose == 0 && typeof callback === 'function') {
-        // console.log("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ 0")
-        // Remove all the listeners
-        // self.removeAllListeners();
         callback(null);          
-      } else if(numberOfServersToClose == 0) {
-        // console.log("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ 1")
-        // Remove all the listeners
-        // self.removeAllListeners();
       }
     })
   }
